# shield

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Dockerfile.ci  README.md  README.zh-CN.md  SHIELD_DI_COMPLETE.md  book.toml  build.bat  build.sh  codecov.yml  format-code.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-hooks.sh  test_di_container  test_di_container.cpp  todo.md  vcpkg-configuration.json  vcpkg.json
examples/: CMakeLists.txt  data_access_complete_example.cpp  database_actor_example.lua  distributed_actor_demo.cpp  enhanced_framework_example.hpp  event_system_examples.cpp  new_api_example.lua  prometheus_example.cpp  reactor_example.cpp  serialization_demo.cpp
examples/hello_world/: main.cpp  my_transport.hpp
examples/hello_world/config/: app.yaml
examples/hello_world/scripts/: echo.lua  gateway.lua  player.lua
plugins/: CMakeLists.txt
plugins/_shared/: shield_db_mapper.hpp  shield_lua_plugin_binding.hpp
plugins/auth_jwt/: CMakeLists.txt  manifest.yaml  plugin.json  shield_auth_jwt.cpp
plugins/cache.redis/: CMakeLists.txt  manifest.yaml  plugin.json  shield_cache_redis.cpp
plugins/example_plugin/: CMakeLists.txt  example_plugin.cpp
plugins/health_http/: CMakeLists.txt  manifest.yaml  plugin.json  shield_health_http.cpp
plugins/leaderboard.redis/: CMakeLists.txt  manifest.yaml  plugin.json  shield_leaderboard_redis.cpp
plugins/matchmaking_elo/: CMakeLists.txt  manifest.yaml  plugin.json  shield_matchmaking_elo.cpp
plugins/metric_prometheus/: CMakeLists.txt  manifest.yaml  plugin.json  shield_metric_prometheus.cpp
plugins/mongodb/: CMakeLists.txt  manifest.yaml  plugin.json  shield_doc_mongodb.cpp
plugins/mongodb/lua/: init.lua
plugins/mysql/: CMakeLists.txt  manifest.yaml  plugin.json  shield_db_mysql.cpp
plugins/postgresql/: CMakeLists.txt  manifest.yaml  plugin.json  shield_db_pgsql.cpp
plugins/protocol.msgpack/: CMakeLists.txt  manifest.yaml  shield_protocol_msgpack.cpp
plugins/protocol.protobuf/: CMakeLists.txt  manifest.yaml  shield_protocol_protobuf.cpp
plugins/queue.redis/: CMakeLists.txt  manifest.yaml  plugin.json  shield_queue_redis.cpp
plugins/redis/: CMakeLists.txt  shield_cache_redis.cpp  shield_leaderboard_redis.cpp  shield_queue_redis.cpp  shield_redis.cpp
plugins/redis.driver/: CMakeLists.txt  manifest.yaml  shield_redis_driver.cpp
plugins/sqlite/: CMakeLists.txt  manifest.yaml  plugin.json  shield_db_sqlite.cpp  smoke_test.cpp
tests/: CMakeLists.txt  CMakeLists_addition.txt  README.md  data_access_integration_test.cpp  data_access_test.lua  hello_world_acceptance.cpp
tests/actor/: test_actor_registry.cpp  test_actor_system_config.cpp  test_actor_system_coordinator.cpp  test_distributed_actor_config.cpp  test_distributed_actor_system.cpp  test_lua_actor.cpp  test_simple_lua_actor.cpp
tests/annotations/: test_component_registry.cpp
tests/cli/: test_command_base.cpp  test_command_class.cpp  test_command_context.cpp  test_command_line_parser.cpp  test_command_parsing.cpp  test_root_command.cpp
tests/commands/: test_commands.cpp  test_server_command.cpp
tests/conditions/: test_conditional_registry.cpp
tests/config/: test_config.cpp  test_config_registry.cpp  test_dynamic_config.cpp  test_ptree_yaml.cpp
tests/core/: test_application_context.cpp  test_config_reload_binder.cpp  test_plugin_host.cpp  test_plugin_manager.cpp  test_starter_manager.cpp
tests/data/: test_data_access_framework.cpp  test_data_pool.cpp  test_query_cache.cpp
tests/database/: test_database_actor_service.cpp
tests/di/: test_advanced_container.cpp  test_container.cpp  test_service_container.cpp
tests/discovery/: test_discovery_config.cpp  test_discovery_service_factory.cpp  test_local_discovery.cpp  test_service_instance.cpp
tests/e2e/: test_full_system.cpp
tests/fixtures/config/: data-enabled.yaml  data_smoke.lua  deferred-network.yaml  duplicate-actors.yaml  duplicate-protocol-route-names.yaml  empty-network-protocol.yaml  fail_init.lua  failing-on-init.yaml  invalid-database.yaml  invalid-log-level.yaml  invalid-lua-cache.yaml  invalid-network-instances.yaml  invalid-network-protocol-type.yaml  invalid-shutdown-timeout.yaml  missing-actor-script.yaml  optional-cluster-disabled.yaml  optional-global-disabled.yaml  overlay-base.yaml  overlay-override.yaml  registry-smoke.yaml  (+5 more)
tests/fs/: test_file_watcher.cpp
tests/gateway/: test_gateway_config.cpp  test_middleware.cpp  test_runtime_diagnostics.cpp
tests/health/: test_health_check.cpp
tests/http/: test_beast_http_server.cpp  test_beast_http_server_config.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
tests/log/: test_log_config.cpp  test_logger.cpp
tests/lua_api/: CMakeLists.txt  lua_api_test_harness.hpp  test_lua_api_caf_bridge.cpp  test_lua_api_call.cpp  test_lua_api_clock.cpp  test_lua_api_concurrency.cpp  test_lua_api_config.cpp  test_lua_api_context.cpp  test_lua_api_data.cpp  test_lua_api_gateway.cpp  test_lua_api_legacy.cpp  test_lua_api_lifecycle.cpp  test_lua_api_messaging.cpp  test_lua_api_registry.cpp  test_lua_api_timers.cpp
tests/metrics/: test_prometheus_config.cpp  test_prometheus_service.cpp
tests/net/: test_console_server.cpp  test_network.cpp  test_network_config.cpp  test_tcp_listener.cpp  test_udp_server.cpp  test_udp_session.cpp
tests/plugin/: test_manifest.cpp  test_plugin_host.cpp  test_protocol_msgpack_plugin.cpp  test_protocol_protobuf_plugin.cpp  test_schema_validator.cpp
tests/protocol/: test_protocol_handler.cpp  test_protocol_handler_factory.cpp  test_websocket_handler.cpp
tests/script/: test_lua_engine.cpp  test_lua_vm_pool.cpp  test_lua_vm_pool_config.cpp
tests/serialization/: test_messagepack_serializer.cpp  test_serialization.cpp  test_universal_serialization_system.cpp
tests/service/: test_service_context.cpp  test_service_handle.cpp
tests/transport/: test_protocol_routing.cpp  test_transport_frame.cpp
tests/util/: test_event_system.cpp  test_health_check.cpp
tools/shield-console/: CMakeLists.txt  main.cpp
(+556 files in other folders)
